part-3/2-routing-seperated-by-query-params/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service-seperated-by-query-params
spec:
  hosts:
    - "seperated-by-query-params.box"
  gateways:
    - app-gateway
  http:
    - match:
        - queryParams:
            platform:
              exact: "mobile"
      route:
        - destination:
            host: app-v1-service
            subset: v1
            port:
              number: 3000
    - route:
        - destination:
            host: app-v2-service
            subset: v2
            port:
              number: 3001
